--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="container1">
         <img class="estrada" src="img/estrada2.png" alt="Descrição da Imagem">
         <div class="overlay">
-            <div class="square square1"></div>
-            <div class="square square2"></div>
-            <div class="square square3"></div>
+            <div class="square square1"> <h1>00:00</h1></div>
+            <div class="square square2"> <h1>00:00</h1></div>
+            <div class="square square3"> <h1>00:00</h1></div>
         </div>
     </div>
 </body>
