--- a/index.html
+++ b/index.html
@@ -12,12 +12,21 @@
     <div class="container1">
         <img class="estrada" src="img/estrada2.png" alt="Descrição da Imagem">
         <div class="overlay">
-            <div class="square square1"> <h1>00:00</h1> <h2>Toneladas entregues</h2></div>
-            <div class="square square2"> <h1>00:00</h1> <h2>KM rodados</h2></div>
-            <div class="square square3"> <h1>00:00</h1> <h2>Itens transportados</div>
+            <div class="square square1">
+                <div id="number1" class="number">00</div>
+                <h2>Toneladas entregues</h2>
+            </div>
+            <div class="square square2">
+                <div id="number2" class="number">00:00</div>
+                <h2>KM rodados</h2>
+            </div>
+            <div class="square square3">
+                <div id="number3" class="number">00:00</div>
+                <h2>Itens transportados</h2>
+            </div>
         </div>
     </div>
-    
+    <script src="script.js"></script>
 </body>
 
 </html>
