--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <div class="quadrado">
+        <img src="img/image.png" alt="Imagem" class="imagem">
+    </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
