--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quadrados sobre Imagem</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
-    <div class="container">
-        <div class="quadrado">
-        <img src="img/image.png" alt="Imagem" class="imagem">
-    </div>
-    </div>
+    <p class="titulo">Rodritati: Desde 2013, somos a solução em transporte rodoviário,
+        unindo eficiência e segurança. Nossa missão é garantir que sua carga chegue ao destino com confiança e pontualidade. Juntos, construindo parcerias sólidas!</p>
 
     <script src="script.js"></script>
 </body>
