--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quadrados sobre Imagem</title>
+    <title>Carrossel</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <p class="titulo">Rodritati: Desde 2013, somos a solução em transporte rodoviário,
-        unindo eficiência e segurança. Nossa missão é garantir que sua carga chegue ao destino com confiança e pontualidade. Juntos, construindo parcerias sólidas!</p>
-
+    <div class="carrossel">
+        <div class="carrossel-inner">
+            <div class="carrossel-item ativo">
+                <img src="img/caminhao.png" alt="Imagem 1">
+            </div>
+            <div class="carrossel-item">
+                <img src="img/caminhao1.png" alt="Imagem 2">
+            </div>
+            <div class="carrossel-item">
+                <img src="img/caminhao.png" alt="Imagem 3">
+            </div>
+            <div class="carrossel-item"></div>
+                <img src="img/caminhao1.png" alt="Imagem 4">
+            </div>
+        </div>
+        <button class="prev">❮</button>
+        <button class="next">❯</button>
+    </div>
     <script src="script.js"></script>
 </body>
-
 </html>
