--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div class="carrossel-item">
                 <img src="img/caminhao.png" alt="Imagem 3">
             </div>
-            <div class="carrossel-item"></div>
-                <img src="img/caminhao1.png" alt="Imagem 4">
+            <div class="carrossel-item">
+                <img src="img/caminhao1.png" alt="Imagem 3">
             </div>
         </div>
         <button class="prev">❮</button>
