--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <div class="carrossel">
         <div class="carrossel-inner">
             <div class="carrossel-item ativo">
-                <img src="img/caminhao.png" alt="Imagem 1">
+                <img src="img/caminhaonovo.png" alt="Imagem 1">
             </div>
             <div class="carrossel-item">
-                <img src="img/caminhao1.png" alt="Imagem 2">
+                <img src="img/caminhao1novo.png" alt="Imagem 2">
             </div>
             <div class="carrossel-item">
-                <img src="img/caminhao.png" alt="Imagem 3">
+                <img src="img/caminhaonovo.png" alt="Imagem 3">
             </div>
             <div class="carrossel-item">
-                <img src="img/caminhao1.png" alt="Imagem 3">
+                <img src="img/caminhao1novo.png" alt="Imagem 4">
             </div>
         </div>
         <button class="prev">❮</button>
