--- a/index.html
+++ b/index.html
@@ -4,26 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acessibilidade</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Link para o CSS -->
 </head>
 <body>
-    <div class="container">
-        <h1>Texto de Exemplo</h1>
-        <p>Esse é um parágrafo de exemplo. Você pode aumentar ou diminuir o tamanho da fonte e mudar o modo de exibição.</p>
-        
-        <div class="controls">
-            <button id="increaseFont">
-                <img src="icon-plus.png" alt="Aumentar Fonte">
-            </button>
-            <button id="decreaseFont">
-                <img src="icon-minus.png" alt="Diminuir Fonte">
-            </button>
-            <button id="toggleMode">
-                <img src="icon-darkmode.png" alt="Modo Escuro">
-            </button>
-        </div>
-    </div>
 
-    <script src="script.js"></script>
+<div class="controls">
+    <button id="increaseFont">
+        <img src="img/acessibilidade/aumentar_fonte.png" alt="Aumentar Fonte">
+    </button>
+    <button id="decreaseFont">
+        <img src="img/acessibilidade/diminuir_fonte.png" alt="Diminuir Fonte">
+    </button>
+    <button id="toggleMode">
+        <img src="img/acessibilidade/contraste.png" alt="Modo Escuro">
+    </button>
+</div>
+
+
+<script src="script.js"></script> <!-- Link para o JavaScript -->
 </body>
 </html>
